tests/ui/bad_derive_missing_attributes.stderr
error[E0277]: `Foo` does not implement `SafeAdd`; add `add` to `#[SafeMathOps(...)]`
  --> tests/ui/bad_derive_missing_attributes.rs:23:1
   |
23 | #[safe_math]
   | ^^^^^^^^^^^^ the trait `SafeAdd` is not implemented for `Foo`
   |
   = help: the following other types implement trait `SafeAdd`:
             i128
             i16
             i32
             i64
             i8
             isize
             u128
             u16
           and $N others
note: required by a bound in `safe_math::safe_add`
  --> src/impls.rs
   |
   | / impl_safe_math_ops!(
   | |     safe_add, SafeAdd, safe_sub, SafeSub, safe_mul, SafeMul, safe_div, SafeDiv, safe_rem, SafeRem
   | |     -------- required by a bound in this function
   | | );
   | |_^ required by this bound in `safe_add`
   = note: this error originates in the attribute macro `safe_math` which comes from the expansion of the macro `impl_safe_math_ops` (in Nightly builds, run with -Z macro-backtrace for more info)
